--- a/index.html
+++ b/index.html
@@ -80,9 +80,37 @@
 								</ul>
 			
 					<figcaption class="trasera">
-						<h2 class="titulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, vero!</h2>
+						<div class="imagen">
+							<img src="qr.png" height="195">
+						</div>
+						<h3 class="titulo">Skills</h3>
 						<hr>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis cupiditate voluptates ipsum suscipit, aspernatur eum, amet nemo architecto nihil corrupti.</p>
+						<p>- Ingles nivel B2 (certificado).</p>
+						<p>- Soft skills</p>
+						<p>- Manjeo de grupos.</p>
+						<p>- Gestiones administrativa</p>
+						
+						<h3 class="titulo">Software</h3>
+						<hr>
+						<p>- HTML - CSS - JavaScript.</p>
+						<p>- React - Mongo DB.</p>
+						<p>- Git - Github.</p>
+						<p>- My SQL - Maria DB.</p>
+						<p>- Node JS</p>
+						
+				<!-- 		<h2 class="titulo">Redes</h2>
+						<hr>
+						<ul class="hobby">
+							<span class="link">
+								<i class="bx-fw bx bxl-linkedin-square" style="font-size:40px;"></i></a>
+							</span>
+							<span class="twit">
+								<i class="bx-fw bx bxl-twitter" style="font-size:40px;"></i></a>
+							</span>
+							<span class="git">
+								<i class="bx-fw bx bxl-github" style="font-size:40px;"></i></a>
+							</span>
+					</ul> -->
 					</figcaption>
 				</figure>
 			</a>
